--- a/css/style_seishunmk1.css
+++ b/css/style_seishunmk1.css
@@ -12,7 +12,7 @@ body, html {
     width: 100vw;
     height: 12vh;
     display: flex;
-    align-items: center;
+    align-items: bottom;
 }
 
 #focus {
